Include new logo + host name

--- a/templates/manifest-common.jsonc
+++ b/templates/manifest-common.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "Web Inspo",
+  "name": "Inspo",
   "permissions": ["storage", "tabs", "alarms", "webNavigation"],
   "background": {
     "service_worker": "realms/background.js"
